--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -107,6 +107,9 @@
         </activity>
         <activity android:name="pilestudios.beatbox.more.more" >
         </activity>
+        
+          <activity android:name="pilestudios.beatbox.more.faq" >
+        </activity>
     </application>
 
 </manifest>
